# CS490VR

./: .gitignore  LICENSE  README.md
Misc/: test_echo_server.py
Rust_proj/: .gitignore  Cargo.toml  README.md
Rust_proj/src/: block.rs  grid.rs  main.rs  network.rs  scene.rs  voxel.rs
Unity_proj/CS490VR/Assets/CS490VR/: Player.prefab  Test.prefab  TestScript.cs  TextureImporter.preset
Unity_proj/CS490VR/Assets/CS490VR/Blocks/: AND Gate.prefab  Block.prefab  Clock.prefab  Diode.prefab  Environment.prefab  Memory Latch.prefab  NAND Gate.prefab  NOR Gate.prefab  NOT Gate.prefab  OR Gate.prefab  Pixel.prefab  Pulse Latch.prefab  Pulse.prefab  Toggle Latch.prefab  Toggle.prefab  Wire.prefab  XNOR Gate.prefab  XOR Gate.prefab
Unity_proj/CS490VR/Assets/CS490VR/Materials/: and_gate_off.mat  and_gate_on.mat  block.mat  clock_off.mat  clock_on.mat  diode_off.mat  diode_on.mat  diode_template.mat  logicgate_template.mat  memory_latch_off.mat  memory_latch_on.mat  nand_gate_off.mat  nand_gate_on.mat  nor_gate_off.mat  nor_gate_on.mat  not_gate_off.mat  not_gate_on.mat  or_gate_off.mat  or_gate_on.mat  pixel_off.mat  pixel_on.mat  player.mat  pulse_latch_off.mat  pulse_latch_on.mat  pulse_off.mat  pulse_on.mat  test_block2.mat  toggle_latch_off.mat  wire.mat  (+10 more)
Unity_proj/CS490VR/Assets/Scenes/: SimScene.unity
Unity_proj/CS490VR/ProjectSettings/: EditorBuildSettings.asset  PresetManager.asset  ProjectSettings.asset  TagManager.asset
Unreal_proj/Quest2_Sim/Config/: DefaultEngine.ini  DefaultGame.ini
Unreal_proj/Quest2_Sim/Saved/SourceControl/: UncontrolledChangelists.json
(+71 files in other folders)
