[package]
name = "logic_simulator_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
log = "0.4.17"
petgraph = { version = "0.6.3", features = ["serde-1"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
simple_logger = "4.1.0"
bimap = { version = "0.6.3", features = ["serde"] }
